@@ -1,0 +1,21 @@
+Window gtkon:version=0.4 using=Gtk title="Enter your age" position={WindowPosition.CENTER} destroy=Gtk.main_quit
+	default-width=300 default-height=20 gtkaml:name=SyncSample {
+	HBox spacing=5 {
+		SpinButton $.spin with-range min=0 max=130 step=1 value=35
+			value-changed={slider.set_value (target.get_value ())};
+		HScale $.slider with-range min=0 max=130 step=1
+			value-changed={spin.set_value (target.get_value ())};
+	}
+
+	-{
+		public static int main (string[] args) {
+			Gtk.init (ref args);
+
+			var window = new SyncSample ();
+			window.show_all ();
+
+			Gtk.main ();
+			return 0;
+		}
+	}-
+}
