@@ -1,3 +1,8 @@
+Changes since gtkaml 0.6 beta1
+- non-automatic properties are correctly parsed
+- struct support
+
+
 Changes since gtkaml 0.4:
 - rewritten to directly generate vala AST nodes
 - split into gtkamlc and libgtkaml.so
